--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,9 @@ button {
     border: 0;
     display: block;
 }
+main {
+    margin-top: 98px;
+    @include desktop {
+        margin-top: 220px;
+    }
+}
