--- a/styles/container.scss
+++ b/styles/container.scss
@@ -24,7 +24,7 @@
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    max-width: 320px !important;
+    max-width: 100% !important;
     width: 100%;
     @include tablet {
         max-width: 768px !important;
