--- a/styles/container.scss
+++ b/styles/container.scss
@@ -3,7 +3,11 @@
         @content;
     }
 }
-
+@mixin mobilelg {
+    @media screen and (min-width: 375px) {
+        @content;
+    }
+}
 @mixin tablet {
     @media screen and (min-width: 768px) {
         @content;
