--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -19,50 +19,55 @@
         z-index: 20;
     }
     .card {
-        margin-top: 65px;
-        margin-bottom: 120px;
-        box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
-        border-radius: 16px;
-        background-color: #fcfcfc;
+        margin-top: 4rem;
+        margin-bottom: 7.5rem;
+        background-image: url("../public/images/haqqinda-card-bg.jpg");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-position: top left;
+        border-radius: 20px;
+        -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
+        position: relative;
         &__inner {
+            padding: 56px 26px 53px 82px;
             display: flex;
             justify-content: space-between;
         }
         &__left {
-            padding-left: 80px;
-            padding-top: 65px;
             max-width: 570px;
-            .card__title {
-                font-weight: 600;
-                font-family: var(--font-source);
-                font-size: 30px;
-                color: #2c2c2c;
-                margin-bottom: 30px;
-            }
-            .card__text {
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
-                p {
-                    font-size: 20px;
-                }
-            }
+        }
+        &__text {
+            font-family: var(--font-source);
+            font-weight: 600;
+            font-size: 2rem;
+            color: #2c2c2c;
+            margin-bottom: 1.5rem;
         }
         &__right {
-            padding: 20px;
-            img {
-                border-radius: 20px;
-                width: 400px;
-                height: 430px;
-                -o-object-fit: cover;
-                object-fit: cover;
+            background: url("../public/images/photo.jpg");
+            background-size: cover;
+            max-width: 400px;
+            height: 443px;
+            width: 100%;
+            border-radius: 15px;
+        }
+        &__info {
+            display: flex;
+            flex-direction: column;
+            font-size: 20px;
+            gap: 20px;
+            margin-bottom: 20px;
+            p {
+                line-height: 28px;
             }
         }
     }
     button {
-        padding: 8px 35px;
-        font-size: 17px;
-        background: linear-gradient(90deg, #9a6b45, #d4b192);
+        padding: 7px 62px;
+        font-size: 20px;
+        background: transparent;
+        font-weight: 500;
         box-shadow: 1px 5px 20px rgba(0, 0, 0, 0.2);
         @include tablet {
             padding: 8px 43px;
@@ -72,13 +77,13 @@
             font-size: 20px;
         }
         &:hover {
-            color: #9a6b45;
+            color: #fff;
             border-color: #9a6b45;
-            background: white;
+            background: #9a6b45;
         }
         transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
         border: 1px solid #9a6b45;
-        color: #fff;
+        color: #9a6b45;
         cursor: pointer;
     }
 }
