--- a/styles/ServicesCard.module.scss
+++ b/styles/ServicesCard.module.scss
@@ -1,36 +1,56 @@
 @import "./container.scss";
-.services :global {
-    display: flex;
-    flex-basis: calc(100% / 3);
-    max-width: 100%;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
-    min-height: 305px;
-    background-color: rgba(255, 255, 255, 0.5);
-    border: 1px #e4e4e4 solid;
-    border-radius: 8px;
-    padding: 22px;
-    @include mobilelg {
-        max-width: 387px;
-    }
-    img {
-        margin-bottom: 25px;
-    }
-    .service {
-        &__title {
-            color: #2c2c2c;
-            font-weight: 600;
-            font-family: var(--font-source);
-            margin-bottom: 50px;
+.services {
+    &:hover {
+        transform: translateY(-10px);
+        box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.25);
+        background-color: #d4b192;
+        img {
+            filter: brightness(2);
         }
-        &__description {
-            text-align: center;
-            color: #444;
-            margin-bottom: 30px;
+        border: 1px #d4b192 solid;
+        a {
+            color: #fff;
         }
-        &__link {
-            color: #d4b192;
+    }
+    & :global {
+        transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+        display: flex;
+        flex-basis: calc(100% / 3);
+        max-width: 100%;
+        flex-direction: column;
+        width: 100%;
+        align-items: center;
+        min-height: 305px;
+        background-color: rgba(255, 255, 255, 0.5);
+        border: 1px #e4e4e4 solid;
+        border-radius: 8px;
+        padding: 23px 20px 28px 20px;
+        @include mobilelg {
+            max-width: 390px;
+        }
+        img {
+            margin-bottom: 25px;
+        }
+        .service {
+            &__title {
+                color: #2c2c2c;
+                font-weight: 600;
+                font-family: var(--font-source);
+                margin-bottom: 50px;
+                text-align: center;
+                font-size: 24px;
+            }
+            &__description {
+                text-align: center;
+                color: #444;
+                margin-bottom: 30px;
+            }
+            &__link {
+                display: flex;
+                align-items: center;
+                gap: 24px;
+                color: #d4b192;
+            }
         }
     }
 }
