--- a/styles/Services.module.scss
+++ b/styles/Services.module.scss
@@ -1,6 +1,6 @@
 @import "./container.scss";
 .services :global {
-    
+
     .services__title {
         margin-bottom: 45px;
         display: flex;
@@ -12,10 +12,12 @@
         color: #2c2c2c;
         text-transform: uppercase;
     }
+    
     .services__list {
         display: flex;
         gap: 15px;
         justify-content: center;
         flex-wrap: wrap;
+        margin-bottom: 6.25rem;
     }
 }
