--- a/styles/Home/Videos.module.scss
+++ b/styles/Home/Videos.module.scss
@@ -35,7 +35,10 @@
             justify-content: center;
             width: 100%;
             font-family: var(--font-source);
-            font-size: 41px;
+            font-size: 30px;
+            @include desktop {
+                font-size: 41px;
+            }
             font-weight: 600;
             color: #2c2c2c;
             text-transform: uppercase;
@@ -47,10 +50,13 @@
             justify-content: center;
             img {
                 position: relative;
+                width: 100%;
+                max-width: 385px;
             }
             .video {
-                max-width: 385px;
-                flex-basis: calc(100% / 3);
+                @include tablet {
+                    max-width: 385px;
+                }
                 background: #fff;
                 display: flex;
                 flex-direction: column;
@@ -59,7 +65,10 @@
                     border: 1px #c4c4c4 solid;
                 }
                 h1 {
-                    font-size: 20px;
+                    @include mobilelg {
+                        font-size: 20px;
+                    }
+                    font-size: 16px;
                     font-weight: 500;
                     color: #2c2c2c;
                 }
