--- a/styles/Contacts/Contacts.module.scss
+++ b/styles/Contacts/Contacts.module.scss
@@ -1,5 +1,93 @@
 @import "../container.scss";
 
-.contacts :global{
+.contacts :global {
     display: flex;
+    flex-direction: column;
+    position: relative;
+
+    .bg {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        background: url("/images/haqqinda-bg.jpg");
+        z-index: 2;
+    }
+    .content {
+        position: relative;
+        z-index: 5;
+    }
+    .iframe {
+        width: 100%;
+        background-color: #443939;
+        @include desktop {
+            max-height: 663px;
+        }
+        border: 0;
+        z-index: 5;
+    }
+    .contacts__inner {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        gap: 54px;
+        @include tablet {
+            flex-direction: row;
+        }
+        margin-bottom: 70px;
+        margin-top: 90px;
+        .contact__item {
+            display: flex;
+            align-items: center;
+            max-width: 100%;
+            flex: 0 0 100%;
+            @include tablet {
+                flex: 0 0 33.3%;
+                max-width: 33.3%;
+            }
+            flex-direction: column;
+            h1 {
+                font-size: 24px;
+                font-weight: 500;
+                color: #2c2c2c;
+                margin-bottom: 12px;
+            }
+            a {
+                color: #707070;
+                font-size: 18px;
+                &:not(:last-child) {
+                    margin-bottom: 12px;
+                }
+            }
+            p {
+                color: #707070;
+                font-size: 18px;
+                text-align: center;
+                line-height: 24px;
+            }
+            &:not(:last-child) {
+                border-right: 1px solid #d2d2d2;
+            }
+            .icon {
+                border-radius: 50%;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+                height: 90px;
+                width: 90px;
+                background: #d4b192;
+                border: 1px solid #d4b192;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                margin-bottom: 30px;
+                svg {
+                    width: 30px;
+                    fill: #fff;
+                    color: #fff;
+                }
+                transition: all 0.4s linear;
+            }
+        }
+    }
 }
