--- a/styles/Home/About.module.scss
+++ b/styles/Home/About.module.scss
@@ -21,17 +21,30 @@
     .card {
         margin-top: 4rem;
         margin-bottom: 7.5rem;
-        background-image: url("../../public/images/haqqinda-card-bg.jpg");
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-position: top left;
+        background: #fff;
+        @include desktop {
+            background-image: url("../../public/images/haqqinda-card-bg.jpg");
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+            background-position: top left;
+        }
         border-radius: 20px;
         -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.12);
         position: relative;
         &__inner {
-            padding: 56px 26px 53px 82px;
+            padding: 16px;
             display: flex;
+            flex-direction: column;
+            gap: 24px;
+            @include tablet {
+                padding: 32px;
+            }
+            @include desktop {
+                gap: 0;
+                flex-direction: row;
+                padding: 56px 26px 53px 55px;
+            }
             justify-content: space-between;
         }
         &__left {
@@ -40,24 +53,43 @@
         &__text {
             font-family: var(--font-source);
             font-weight: 600;
-            font-size: 2rem;
+            font-size: 1.5rem;
+            @include desktop {
+                font-size: 2rem;
+            }
             color: #2c2c2c;
             margin-bottom: 1.5rem;
         }
         &__right {
-            background: url("../../public/images/photo.jpg");
-            background-size: cover;
-            max-width: 400px;
-            height: 443px;
-            width: 100%;
-            border-radius: 15px;
+            // background: url("../../public/images/photo.jpg");
+            // background-size: cover;
+            // max-height: 100%;
+            // @include desktop {
+            //     max-width: 400px;
+            //     height: 443px;
+            // }
+            @include desktop {
+                max-width: 400px;
+                width: 100%;
+            }
+            img {
+                border-radius: 20px;
+                width: 100%;
+                height: 430px;
+                -o-object-fit: cover;
+                object-fit: cover;
+                margin-left: -5px;
+            }
         }
         &__info {
             display: flex;
             flex-direction: column;
-            font-size: 20px;
+            font-size: 16px;
             gap: 20px;
             margin-bottom: 20px;
+            @include tablet {
+                font-size: 20px;
+            }
             p {
                 line-height: 28px;
             }
