--- a/styles/Home/Testimonials.module.scss
+++ b/styles/Home/Testimonials.module.scss
@@ -37,14 +37,25 @@
             width: 100%;
             height: 100%;
         }
-        .swiper-button-prev, .swiper-button-next{
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+            @include desktop {
+                justify-content: start;
+            }
+        }
+        .swiper-button-prev,
+        .swiper-button-next {
             top: 90%;
             bottom: 0;
         }
         .swiper__testimonial {
             padding-bottom: 85px;
             margin-bottom: 45px;
-            max-height: 350px;
+            max-height: 500px;
+            @media screen and (min-width: 576px) {
+                max-height: 350px;
+            }
             height: 100%;
             .swiper-pagination-fraction,
             .swiper-pagination-custom,
@@ -59,26 +70,61 @@
         }
         .testimonial {
             display: flex;
-            gap: 25px;
-            max-width: 572px;
+            flex-direction: column;
+            align-items: center;
+            @media screen and (min-width: 576px) {
+                flex-direction: row;
+                max-width: 572px;
+                gap: 25px;
+                align-items: start;
+            }
+            &__img {
+                width: 165px;
+                display: flex;
+                @media screen and (min-width: 576px) {
+                    margin-bottom: 30px;
+                }
+                img {
+                    width: 165px;
+                    height: 210px;
+                    object-fit: cover;
+                }
+            }
             &__info {
                 display: flex;
                 flex-direction: column;
+                text-align: center;
                 justify-content: center;
-                gap: 40px;
+                @media screen and (min-width: 576px) {
+                    text-align: start;
+                    gap: 40px;
+                }
             }
             &__title {
-                font-size: 24px;
+                @media screen and (min-width: 576px) {
+                    font-size: 24px;
+                    text-align: start;
+                    margin: 0;
+                }
+                margin-top: 30px;
+                margin-bottom: 24px;
+                text-align: center;
+                font-size: 20px;
                 font-weight: 500;
                 color: #fff;
             }
             &__description {
                 font-family: var(--font-roboto);
-                font-size: 20px;
-                font-weight: 300;
-                color: #fff;
-                line-height: 32px;
+                font-weight: 200;
                 font-style: italic;
+                color: #fff;
+                font-size: 16px;
+                line-height: 28px;
+                @media screen and (min-width: 576px) {
+                    font-size: 20px;
+                    font-weight: 300;
+                    line-height: 32px;
+                }
             }
         }
     }
@@ -90,7 +136,10 @@
             justify-content: center;
             width: 100%;
             font-family: var(--font-source);
-            font-size: 41px;
+            font-size: 30px;
+            @include desktop {
+                font-size: 41px;
+            }
             font-weight: 600;
             color: #d4b192;
             text-transform: uppercase;
