--- a/styles/Layout/Footer.module.scss
+++ b/styles/Layout/Footer.module.scss
@@ -5,12 +5,27 @@
     width: 100%;
     .footer {
         &__up {
+            display: none;
+            @include tablet {
+                display: block;
+            }
             .container {
                 display: flex;
-                padding: 30px 0;
-                align-items: flex-start;
+                padding: 30px 15px;
+                gap: 12px;
+                align-items: center;
+                flex-direction: column;
+                @include desktop {
+                    padding: 30px 0;
+                    flex-direction: row;
+                    align-items: flex-start;
+                }
                 img {
                     margin-right: 135px;
+                    display: none;
+                    @include desktop {
+                        display: block;
+                    }
                 }
                 .footer__links {
                     display: flex;
@@ -37,8 +52,11 @@
                 }
                 .footer__contacts {
                     gap: 20px;
-                    margin-left: auto;
                     display: flex;
+                    margin-right: auto;
+                    @include desktop {
+                        margin-left: auto;
+                    }
                     &-item {
                         width: 35px;
                         height: 35px;
@@ -50,11 +68,71 @@
                     }
                 }
             }
+            &-mobile {
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                @include tablet {
+                    display: none;
+                }
+                background-color: #443939;
+                .footer__item {
+                    padding: 35px 0;
+                    display: flex;
+                    &:not(:last-child) {
+                        border-bottom: 1px #6d6d6d solid;
+                    }
+                    width: 100%;
+                    &-inner {
+                        &.socials {
+                            ul {
+                                display: flex;
+                                flex-direction: row;
+                                justify-content: center;
+                                gap: 20px;
+                                li {
+                                    a {
+                                        width: 35px;
+                                        height: 35px;
+                                        border: 1px #fff solid;
+                                        border-radius: 6px;
+                                        display: flex;
+                                        align-items: center;
+                                        justify-content: center;
+                                    }
+                                }
+                            }
+                        }
+                        ul {
+                            display: flex;
+                            flex-direction: column;
+                            gap: 16px;
+                            li {
+                                a {
+                                    color: #fff;
+                                    font-weight: 500;
+                                    opacity: 0.8;
+                                    font-size: 18px;
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
         &__down {
             border-top: 1px #6d6d6d solid;
             .container {
                 display: flex;
+                flex-direction: column;
+                text-align: center;
+                gap: 12px;
+                @include tablet {
+                    gap: 0;
+                    flex-direction: row;
+                    text-align: start;
+                }
                 justify-content: space-between;
                 padding: 20px 0;
                 p {
