--- a/styles/About/About.module.scss
+++ b/styles/About/About.module.scss
@@ -23,6 +23,10 @@
             padding-bottom: 120px;
             .about__info {
                 display: flex;
+                flex-direction: column;
+                @include desktop {
+                    flex-direction: row;
+                }
                 gap: 52px;
                 .info {
                     &__up {
@@ -36,7 +40,16 @@
                             }
                         }
                         p {
-                            font-size: 20px;
+                            @include tablet {
+                                font-size: 20px;
+                                &:first-of-type {
+                                    margin-bottom: 12px;
+                                }
+                                &:last-of-type {
+                                    margin-bottom: 30px;
+                                }
+                            }
+                            font-size: 16px;
                             color: #707070;
                             line-height: 32px;
                             &:first-of-type {
@@ -107,6 +120,14 @@
                     flex-direction: column;
                     align-items: flex-start;
                     gap: 48px;
+                    img {
+                        width: 100%;
+                        box-shadow: 4px 6px 10px rgba(0, 0, 0, 0.2);
+                        @include tablet {
+                            width: auto;
+                            box-shadow: none;
+                        }
+                    }
                     &__text {
                         display: flex;
                         flex-direction: column;
@@ -146,6 +167,7 @@
                     width: 387px;
                     img {
                         object-fit: cover;
+                        object-position: 35% 35%;
                         user-select: none;
                         width: 100%;
                         height: 100%;
