--- a/styles/Contacts/Contacts.module.scss
+++ b/styles/Contacts/Contacts.module.scss
@@ -21,6 +21,7 @@
     }
     .iframe {
         width: 100%;
+        max-height: 250px;
         background-color: #443939;
         @include desktop {
             max-height: 663px;
@@ -32,9 +33,12 @@
         display: flex;
         justify-content: center;
         flex-direction: column;
-        gap: 54px;
         @include tablet {
+            gap: 0;
             flex-direction: row;
+        }
+        @include desktop{
+            gap: 54px;
         }
         margin-bottom: 70px;
         margin-top: 90px;
@@ -67,8 +71,13 @@
                 text-align: center;
                 line-height: 24px;
             }
+            @include tablet {
+                &:not(:last-child) {
+                    border-right: 1px solid #d2d2d2;
+                }
+            }
             &:not(:last-child) {
-                border-right: 1px solid #d2d2d2;
+                border-right: 0;
             }
             .icon {
                 border-radius: 50%;
