--- a/styles/Layout/Breadcrumb.module.scss
+++ b/styles/Layout/Breadcrumb.module.scss
@@ -1,3 +1,5 @@
+@import "../container.scss";
+
 .breadcrumb :global {
     background-image: url("/images/breadcrumb.jpg");
     background-repeat: no-repeat;
@@ -10,7 +12,10 @@
         text-align: center;
         color: #fff;
         position: relative;
-        font-size: 54px;
+        font-size: 32px;
+        @include tablet {
+            font-size: 54px;
+        }
         text-transform: uppercase;
         font-family: var(--font-source);
         font-weight: 600;
@@ -34,15 +39,29 @@
             flex-direction: column;
             ul {
                 display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                gap: 10px;
+                align-items: center;
+                @include tablet {
+                    gap: 0;
+                }
                 li {
                     display: flex;
                     align-items: center;
                     color: #fff;
+                    font-size: 14px;
+                    @include tablet {
+                        font-size: 16px;
+                        &:not(:first-child) {
+                            margin-left: 13px;
+                        }
+                    }
+                    &:not(:first-child) {
+                        margin-left: 6px;
+                    }
                     a {
                         color: #fff;
-                    }
-                    &:nth-child(2) {
-                        margin-left: 13px;
                     }
                 }
             }
