--- a/styles/Layout/Footer.module.scss
+++ b/styles/Layout/Footer.module.scss
@@ -131,10 +131,11 @@
                 @include tablet {
                     gap: 0;
                     flex-direction: row;
+                    padding: 20px 0;
                     text-align: start;
                 }
                 justify-content: space-between;
-                padding: 20px 0;
+                padding: 20px 15px;
                 p {
                     color: #c4c4c4;
                     font-size: 16px;
